--- a/KNN-Classifier-Steel-Surface-Defects.ipynb
+++ b/KNN-Classifier-Steel-Surface-Defects.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## KNN Classifier for Steel surface defect recognition\n",
     "\n",
@@ -33,277 +32,261 @@
     "SOFTWARE.\n",
     "\n",
     "### Note: for this case, the number of neighbors in KNN were set to `1` and the dataset was also configured accordingly."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 38,
    "source": [
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from imutils import paths\n",
-    "import numpy as np\n",
-    "import argparse\n",
-    "import imutils\n",
-    "import cv2\n",
+    "from sklearn.neighbors import KNeighborsClassifier\r\n",
+    "from sklearn.model_selection import train_test_split\r\n",
+    "from imutils import paths\r\n",
+    "import numpy as np\r\n",
+    "import argparse\r\n",
+    "import imutils\r\n",
+    "import cv2\r\n",
     "import os"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### KNN classifier arguments\n",
     "\n",
     "#### NOTE: You may need to change the path in the below dictionary as per your dataset "
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 39,
    "source": [
-    "args = {'training_dataset': './dataset_all/knn_data/training',\n",
-    "        'testing_dataset': './dataset_all/knn_data/testing',\n",
-    "        'neighbors': 1,\n",
+    "args = {'training_dataset': './datasets_all/knn_data/training',\r\n",
+    "        'testing_dataset': './datasets_all/knn_data/testing',\r\n",
+    "        'neighbors': 1,\r\n",
     "        'jobs': 1}"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Convert image to Vector\n",
     "Function to *resize* the image to a fixed size, then flatten the image into a list of raw pixel intensities"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 40,
    "source": [
-    "def image_to_feature_vector(image, size=(32, 32)):\n",
+    "def image_to_feature_vector(image, size=(32, 32)):\r\n",
     "    return cv2.resize(image, size).flatten()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Extract a 3D color histogram from the HSV color space using the supplied number of `bins` per channel"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 41,
    "source": [
-    "def extract_color_histogram(image, bins=(8, 8, 8)):\n",
-    "    hsv = cv2.cvtColor(image, cv2.COLOR_BGR2HSV)\n",
-    "    hist = cv2.calcHist([hsv], [0, 1, 2], None, bins, [0, 180, 0, 256, 0, 256])\n",
-    "    cv2.normalize(hist, hist)\n",
+    "def extract_color_histogram(image, bins=(8, 8, 8)):\r\n",
+    "    hsv = cv2.cvtColor(image, cv2.COLOR_BGR2HSV)\r\n",
+    "    hist = cv2.calcHist([hsv], [0, 1, 2], None, bins, [0, 180, 0, 256, 0, 256])\r\n",
+    "    cv2.normalize(hist, hist)\r\n",
     "    return hist.flatten()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Image paths"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
+   "source": [
+    "imagePaths = list(paths.list_images(args[\"training_dataset\"]))\r\n",
+    "imagePaths_test = list(paths.list_images(args[\"testing_dataset\"]))"
+   ],
+   "outputs": [],
    "metadata": {
     "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "imagePaths = list(paths.list_images(args[\"training_dataset\"]))\n",
-    "imagePaths_test = list(paths.list_images(args[\"testing_dataset\"]))"
-   ]
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Helper function to prepare data\n",
     "* Extract each image and corresponding class label"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 43,
    "source": [
-    "def prepare_data(imagePaths):\n",
-    "    rawImages, features, labels = [], [], []\n",
-    "    \n",
-    "    for (i, imagePath) in enumerate(imagePaths):    \n",
-    "        image = cv2.imread(imagePath)\n",
-    "        label = imagePath.split(os.path.sep)[-1].split(\".\")[0].split(\"_\")[0]\n",
-    "        pixels = image_to_feature_vector(image)\n",
-    "        hist = extract_color_histogram(image)\n",
-    "        \n",
-    "        rawImages.append(pixels)\n",
-    "        features.append(hist)\n",
-    "        labels.append(label)\n",
-    "    \n",
+    "def prepare_data(imagePaths):\r\n",
+    "    rawImages, features, labels = [], [], []\r\n",
+    "    \r\n",
+    "    for (i, imagePath) in enumerate(imagePaths):    \r\n",
+    "        image = cv2.imread(imagePath)\r\n",
+    "        label = imagePath.split(os.path.sep)[-1].split(\".\")[0].split(\"_\")[0]\r\n",
+    "        pixels = image_to_feature_vector(image)\r\n",
+    "        hist = extract_color_histogram(image)\r\n",
+    "        \r\n",
+    "        rawImages.append(pixels)\r\n",
+    "        features.append(hist)\r\n",
+    "        labels.append(label)\r\n",
+    "    \r\n",
     "    return rawImages, features, labels"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Load training and testing data"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 44,
    "source": [
-    "train_images, train_features, train_labels = prepare_data(imagePaths)\n",
-    "test_images, test_features, test_labels = prepare_data(imagePaths_test)\n",
-    "\n",
+    "train_images, train_features, train_labels = prepare_data(imagePaths)\r\n",
+    "test_images, test_features, test_labels = prepare_data(imagePaths_test)\r\n",
+    "\r\n",
     "print(\"[INFO] Shape of the image sampled from dataset:\", train_images[0].shape)"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mC:\\Users\\LOCALH~1\\AppData\\Local\\Temp/ipykernel_13364/2375223754.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mtest_images\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest_features\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest_labels\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mprepare_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimagePaths_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"[INFO] Shape of the image sampled from dataset:\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_images\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "### Memory consumed by the raw images matrix and features matrix\n",
-    "\n",
+    "### Memory consumed by the raw images matrix and features matrix\r\n",
+    "\r\n",
     "##### Training set"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "trainRI = np.array(train_images)\n",
-    "trainRL = np.array(train_labels)\n",
-    "trainF = np.array(train_features)\n",
-    "print(\"[INFO] pixels matrix: {:.2f}MB\".format(trainRI.nbytes / (1024 * 1000.0)))\n",
+    "trainRI = np.array(train_images)\r\n",
+    "trainRL = np.array(train_labels)\r\n",
+    "trainF = np.array(train_features)\r\n",
+    "print(\"[INFO] pixels matrix: {:.2f}MB\".format(trainRI.nbytes / (1024 * 1000.0)))\r\n",
     "print(\"[INFO] features matrix: {:.2f}MB\".format(trainF.nbytes / (1024 * 1000.0)))"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[INFO] pixels matrix: 0.02MB\n",
+      "[INFO] features matrix: 0.01MB\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "##### Testing set"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "testRI = np.array(test_images)\n",
-    "testRL = np.array(test_labels)\n",
-    "testF = np.array(test_features)\n",
-    "print(\"[INFO] pixels matrix: {:.2f}MB\".format(testRI.nbytes / (1024 * 1000.0)))\n",
+    "testRI = np.array(test_images)\r\n",
+    "testRL = np.array(test_labels)\r\n",
+    "testF = np.array(test_features)\r\n",
+    "print(\"[INFO] pixels matrix: {:.2f}MB\".format(testRI.nbytes / (1024 * 1000.0)))\r\n",
     "print(\"[INFO] features matrix: {:.2f}MB\".format(testF.nbytes / (1024 * 1000.0)))"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[INFO] pixels matrix: 5.40MB\n",
+      "[INFO] features matrix: 3.60MB\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Train and evaluate the k-NN classifer on the raw pixel intensities"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "source": [
+    "print(\"[INFO] evaluating raw pixel accuracy...\")\r\n",
+    "model = KNeighborsClassifier(n_neighbors=args[\"neighbors\"], n_jobs=args[\"jobs\"])\r\n",
+    "model.fit(trainRI, trainRL)\r\n",
+    "acc = model.score(testRI, testRL)\r\n",
+    "\r\n",
+    "print(\"[INFO] raw pixel accuracy: {:.2f}%\".format(acc * 100))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[INFO] evaluating raw pixel accuracy...\n",
+      "[INFO] raw pixel accuracy: 28.22%\n"
+     ]
+    }
+   ],
    "metadata": {
     "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "print(\"[INFO] evaluating raw pixel accuracy...\")\n",
-    "model = KNeighborsClassifier(n_neighbors=args[\"neighbors\"], n_jobs=args[\"jobs\"])\n",
-    "model.fit(trainRI, trainRL)\n",
-    "acc = model.score(testRI, testRL)\n",
-    "\n",
-    "print(\"[INFO] raw pixel accuracy: {:.2f}%\".format(acc * 100))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Train and test KNN-classifier on Histogram Representation of image data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Load data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_test_data = train_test_split(features, labels, test_size=0.25, random_state=42)\n",
-    "\n",
-    "train_features, test_features, trainLabels, testLabels = train_test_data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Histogram representations - train and evaluate k-NN classifer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"[INFO] evaluating histogram accuracy...\")\n",
-    "\n",
-    "model = KNeighborsClassifier(n_neighbors=args[\"neighbors\"],n_jobs=args[\"jobs\"])\n",
-    "\n",
-    "model.fit(train_features, trainLabels)\n",
-    "\n",
-    "acc = model.score(test_features, testLabels)\n",
-    "print(\"[INFO] histogram accuracy: {:.2f}%\".format(acc * 100))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   }
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.9.1 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -315,7 +298,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.9.1"
+  },
+  "interpreter": {
+   "hash": "e2b6c2d7d9ddd64edc1a9f96033484bf1fa809b0d53b1acdc555142cab2cb3aa"
   }
  },
  "nbformat": 4,
